71 entries, right whitespace fixed

--- a/main-style.css
+++ b/main-style.css
@@ -26,7 +26,7 @@ html, body
 	color: black;
 	font-family: OpenSans, helvetica, sans-serif;
 	/*overflow-x: hidden;*/
-	min-width: 1024px;
+	min-width: fit-content;
 	/*width: 100%;*/
 }
 
@@ -70,7 +70,8 @@ html, body
 	/*background-color: lightgray;*/
 	position: relative;
 	top: 65px;
-	left: 190px;
+	margin-left: auto;
+	margin-right: auto;
 	/*height: 300px;*/
 	width: 700px;
 }
@@ -159,7 +160,7 @@ html, body
 	/*border: 1px solid white;*/
 	width: 800px;
 	height: 70px;
-	left: 20%;
+	left: 10%;
 }
 
 #button-cv{
@@ -265,8 +266,8 @@ a:hover, a:active {
 	border-collapse: collapse;
 	border-spacing: 10px 15px;
 	padding: 10px;
-	margin-left: 10px;
-	margin-right: 10px;
+	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: 30px;
 	margin-top: 10px;
 	/*width: 1200px;*/
@@ -289,6 +290,7 @@ a:hover, a:active {
 #internship-heading{
 	background-image: url('bgimage.jpg');
 	background-size: cover;
+	width: 100%;
 	background-position: bottom;
 	height: 300px;
 	color: lightgray;
@@ -320,22 +322,25 @@ a:hover, a:active {
 	text-align: center;
     bottom: 0px ;
     width: 100%;
-    height: 22px; 
+    height: 40px; 
     background: lightgray ;
     opacity: 1.0;
 }
 
 #back-to-top{
-	margin: 0px;
 	float: left;
+	font-size: 25px;
+	color: steelblue;
+	padding-top: 3px;
 }
 
 #last-updated{
 	float: right;
+	padding-top: 12px;
 }
 
 #internship-add-rsc{
-	margin-left: 20px;
-	padding: 10px;
-	margin-bottom: 10px;
+	margin-left: 30px;
+	margin-bottom: 40px;
+	padding-left: 15px;
 }
